@@ -145,17 +145,17 @@
 		END # If a.accno... ?><?lsmb
 	END # FOREACH a ?>
       </span>
-     </div>
-     <?lsmb  IF defaultcurrency != curr ?>
+     </div> 
+     <?lsmb  IF default_currency != currency ?>
       <div class="info" id="exrate_row">
          <?lsmb PROCESS input element_data= {
-		label = text('Exchange Rate')
-		type = text
+		label = text('Exchange Rate') #'
+		type = 'text'
 		class = "numeric"
-		name = 'exchange_rate'
-		value = exchange_rate
+		name = 'exchangerate'
+		value = exchangerate
 		size = 20
-	} # ' ?>
+	}  ?>
 	</div>
      <?lsmb END ?>
      <?lsmb IF business ?>
