@@ -121,8 +121,7 @@ $$ This function takes a single argument (1 for vendor, 2 for customer as
 	LOOP
 		RETURN NEXT out_entity;
 	END LOOP;
-END;
-$$ LANGUAGE PLPGSQL;
+$$;
 
 COMMENT ON FUNCTION payment_get_all_accounts(int) IS
 $$ This function takes a single argument (1 for vendor, 2 for customer as 
@@ -358,7 +357,7 @@ BEGIN
 		    JOIN (SELECT ap.id, invnumber, transdate, amount, entity_id, 
 				 curr, 1 as invoice_class,
 		                 entity_credit_account, on_hold, v.batch_id,
-				 approved
+				 approved, paid
 		            FROM ap
 		       LEFT JOIN (select * from voucher where batch_class = 1) v 
 			         ON (ap.id = v.trans_id)
@@ -368,7 +367,7 @@ BEGIN
 		          SELECT ar.id, invnumber, transdate, amount, entity_id,
 		                 curr, 2 as invoice_class,
 		                 entity_credit_account, on_hold, v.batch_id,
-				 approved
+				 approved, paid
 		            FROM ar
 		       LEFT JOIN (select * from voucher where batch_class = 2) v 
 			         ON (ar.id = v.trans_id)
@@ -397,6 +396,7 @@ BEGIN
 		             AND a.approved
 		         AND a.amount <> a.paid 
 			 AND NOT a.on_hold
+                         AND a.curr = in_currency
 		         AND EXISTS (select trans_id FROM acc_trans
 		                      WHERE trans_id = a.id AND
 		                            chart_id = (SELECT id from account
@@ -439,114 +439,142 @@ the LedgerSMB discretionary locking framework, and if not possible, returns the
 username of the individual who has the lock.
 $$;
 
+DROP FUNCTION IF EXISTS payment_bulk_post
+(in_transactions numeric[], in_batch_id int, in_source text, in_total numeric,
+        in_ar_ap_accno text, in_cash_accno text,
+        in_payment_date date, in_account_class int,
+        in_exchangerate numeric, in_curr text);
 
 CREATE OR REPLACE FUNCTION payment_bulk_post
 (in_transactions numeric[], in_batch_id int, in_source text, in_total numeric,
-	in_ar_ap_accno text, in_cash_accno text, 
-	in_payment_date date, in_account_class int,
-        in_exchangerate numeric, in_curr text)
+        in_ar_ap_accno text, in_cash_accno text, 
+        in_payment_date date, in_account_class int,
+        in_exchangerate numeric, in_currency text)
 RETURNS int AS
 $$
 DECLARE 
-	out_count int;
-	t_voucher_id int;
-	t_trans_id int;
-	t_amount numeric;
+        out_count int;
+        t_voucher_id int;
+        t_trans_id int;
+        t_amount numeric;
         t_ar_ap_id int;
-	t_cash_id int;
+        t_cash_id int;
         t_currs text[];
         t_exchangerate numeric;
+        t_cash_sign int;
 BEGIN
-	IF in_batch_id IS NULL THEN
-		-- t_voucher_id := NULL;
-		RAISE EXCEPTION 'Bulk Post Must be from Batch!';
-	ELSE
-		INSERT INTO voucher (batch_id, batch_class, trans_id)
-		values (in_batch_id,
+        IF in_batch_id IS NULL THEN
+                -- t_voucher_id := NULL;
+                RAISE EXCEPTION 'Bulk Post Must be from Batch!';
+        ELSE
+                INSERT INTO voucher (batch_id, batch_class, trans_id)
+                values (in_batch_id,
                 (SELECT batch_class_id FROM batch WHERE id = in_batch_id),
                 in_transactions[1][1]);
 
-		t_voucher_id := currval('voucher_id_seq');
-	END IF;
+                t_voucher_id := currval('voucher_id_seq');
+        END IF;
 
-	SELECT string_to_array(value, ':') into t_currs 
+        SELECT string_to_array(value, ':') into t_currs 
           from defaults 
          where setting_key = 'curr';
 
-        IF (in_curr IS NULL OR in_curr = t_currs[0]) THEN
+        IF (in_currency IS NULL OR in_currency = t_currs[0]) THEN
                 t_exchangerate := 1;
         ELSE 
                 t_exchangerate := in_exchangerate;
         END IF;
+        IF t_exchangerate IS NULL THEN
+            RAISE EXCEPTION 'No exchangerate provided and not default currency';
+        END IF;
 
-	CREATE TEMPORARY TABLE bulk_payments_in (id int, amount numeric);
+        CREATE TEMPORARY TABLE bulk_payments_in
+           (id int, amount numeric, fxrate numeric, gain_loss_accno int);
 
-	select id into t_ar_ap_id from chart where accno = in_ar_ap_accno;
-	select id into t_cash_id from chart where accno = in_cash_accno;
+        select id into t_ar_ap_id from chart where accno = in_ar_ap_accno;
+        select id into t_cash_id from chart where accno = in_cash_accno;
 
-	FOR out_count IN 
-			array_lower(in_transactions, 1) ..
-			array_upper(in_transactions, 1)
-	LOOP
-		EXECUTE $E$
-			INSERT INTO bulk_payments_in(id, amount)
-			VALUES ($E$ || quote_literal(in_transactions[out_count][1])
-				|| $E$, $E$ ||
-				quote_literal(in_transactions[out_count][2])
-				|| $E$)$E$;
-	END LOOP;
-	EXECUTE $E$ 
-		INSERT INTO acc_trans 
-			(trans_id, chart_id, amount, approved, voucher_id, transdate, 
-			source)
-		SELECT id, 
-		case when $E$ || quote_literal(in_account_class) || $E$ = 1
-				quote_literal(in_transactions[out_count][2])
-				|| $E$)$E$;
-	END LOOP;
-	EXECUTE $E$ 
-		INSERT INTO acc_trans 
-			(trans_id, chart_id, amount, approved, voucher_id, transdate, 
-			source)
-		SELECT id, 
-		case when $E$ || quote_literal(in_account_class) || $E$ = 1
-			THEN $E$ || t_cash_id || $E$
-			WHEN $E$ || quote_literal(in_account_class) || $E$ = 2 
-			THEN $E$ || t_ar_ap_id || $E$
-			ELSE -1 END, 
-		amount * $E$|| quote_literal(t_exchangerate) || $E$,
-		CASE 
-			WHEN $E$|| t_voucher_id || $E$ IS NULL THEN true
-			ELSE false END,
-		$E$ || t_voucher_id || $E$, $E$|| quote_literal(in_payment_date) 
-		||$E$ , $E$ ||COALESCE(quote_literal(in_source), 'NULL') || 
-		$E$ 
-		FROM bulk_payments_in  where amount <> 0 $E$;
+        FOR out_count IN 
+                        array_lower(in_transactions, 1) ..
+                        array_upper(in_transactions, 1)
+        LOOP
+            -- Fill the bulk payments table
+            INSERT INTO bulk_payments_in(id, amount)
+            VALUES (in_transactions[out_count][1],
+                    in_transactions[out_count][2]);
+        END LOOP;
 
-	EXECUTE $E$ 
-		INSERT INTO acc_trans 
-			(trans_id, chart_id, amount, approved, voucher_id, transdate, 
-			source)
-		SELECT id, 
-		case when $E$ || quote_literal(in_account_class) || $E$ = 1 
-			THEN $E$ || t_ar_ap_id || $E$
-			WHEN $E$ || quote_literal(in_account_class) || $E$ = 2 
-			THEN $E$ || t_cash_id || $E$
-			ELSE -1 END, 
-		amount * -1 * $E$|| quote_literal(t_exchangerate) || $E$,
-		CASE 
-			WHEN $E$|| t_voucher_id || $E$ IS NULL THEN true
-			ELSE false END,
-		$E$ || t_voucher_id || $E$, $E$|| quote_literal(in_payment_date) 
-		||$E$ , $E$ ||COALESCE(quote_literal(in_source), 'null') 
-		||$E$ 
-		FROM bulk_payments_in where amount <> 0 $E$;
+        IF in_account_class = 1 THEN
+            t_cash_sign := 1;
+        ELSE
+            t_cash_sign := -1;
+        END IF;
 
-	-- ### BUG: Where's the FX gain/loss part for FX postings??
+        IF (in_currency IS NULL OR in_currency = t_currs[0]) THEN
+            UPDATE bulk_payments_in
+               SET fxrate = 1;
+        ELSE
+            UPDATE bulk_payments_in
+               SET fxrate =
+                (SELECT CASE WHEN in_account_class = 1 THEN sell
+                             ELSE buy
+                        END
+                   FROM exchangerate e
+                   JOIN (SELECT transdate, id, curr FROM ar
+                         UNION
+                         SELECT transdate, id, curr FROM ap) a
+                     ON (e.transdate = a.transdate
+                         AND e.curr = a.curr)
+                   WHERE a.id = bulk_payments_in.id);
+            UPDATE bulk_payments_in
+               SET gain_loss_accno =
+                (SELECT value::int FROM defaults
+                  WHERE setting_key = 'fxgain_accno_id')
+             WHERE ((t_exchangerate - bulk_payments_in.fxrate) * t_cash_sign) < 0;
+            UPDATE bulk_payments_in
+               SET gain_loss_accno = (SELECT value::int FROM defaults
+                  WHERE setting_key = 'fxloss_accno_id')
+             WHERE ((t_exchangerate - bulk_payments_in.fxrate) * t_cash_sign) > 0;
+            -- explicitly leave zero gain/loss accno_id entries at NULL
+            -- so we have an easy check for which 
+        END IF;
 
-	EXECUTE $E$ DROP TABLE bulk_payments_in $E$;
-	perform unlock_all();
-	return out_count;
+        -- Insert cash side
+        INSERT INTO acc_trans
+             (trans_id, chart_id, amount, approved,
+              voucher_id, transdate, source)
+           SELECT id, t_cash_id, amount * t_cash_sign * t_exchangerate,
+                  CASE WHEN t_voucher_id IS NULL THEN true
+                       ELSE false END,
+                  t_voucher_id, in_payment_date, in_source
+             FROM bulk_payments_in  where amount <> 0;
+
+        -- Insert ar/ap side
+        INSERT INTO acc_trans
+             (trans_id, chart_id, amount, approved,
+              voucher_id, transdate, source)
+           SELECT id, t_ar_ap_id,
+                  amount * -1 * t_cash_sign * fxrate,
+                  CASE WHEN t_voucher_id IS NULL THEN true
+                       ELSE false END,
+                  t_voucher_id, in_payment_date, in_source
+             FROM bulk_payments_in where amount <> 0;
+
+        -- Insert fx gain/loss effects, if applicable
+        INSERT INTO acc_trans
+             (trans_id, chart_id, amount, approved,
+              voucher_id, transdate, source)
+           SELECT id, gain_loss_accno,
+                  amount * -1 * t_cash_sign * (t_exchangerate - fxrate),
+                  CASE WHEN t_voucher_id IS NULL THEN true
+                       ELSE false END,
+                  t_voucher_id, in_payment_date, in_source
+             FROM bulk_payments_in
+            WHERE amount <> 0 AND gain_loss_accno IS NOT NULL;
+
+        DROP TABLE bulk_payments_in;
+        perform unlock_all();
+        return out_count;
 END;
 $$ language plpgsql;
 
@@ -554,7 +582,7 @@ COMMENT ON FUNCTION payment_bulk_post
 (in_transactions numeric[], in_batch_id int, in_source text, in_total numeric,
         in_ar_ap_accno text, in_cash_accno text, 
         in_payment_date date, in_account_class int, 
-	in_exchangerate numeric, in_curr text)
+	in_exchangerate numeric, in_currency text)
 IS
 $$ This posts the payments for large batch workflows.
 
@@ -1290,10 +1318,7 @@ BEGIN
             
       LOOP
            RETURN NEXT out_overpayment;
-    		WHERE available <> 0 AND in_account_class = payment_class
-        LOOP
-                RETURN NEXT out_entity;
-        END LOOP;
+      END LOOP;
  END;
 $$ LANGUAGE PLPGSQL;
 
