@@ -16,6 +16,13 @@ Changelog for 1.3.11
   do recs from bank perspective (Chris T)
 * Added "bank register mode" for account transaction lists (Chris T)
 * Fixed join projection issue in draft search routine (Chris T)
+* Fixed prepare-database.sh for Pg 9.1 (Erik H)
+* Fixed Customer/vendor selection for dropdowns (Chris T)
+* Fixed some HASH() entries in CSV templates (Chris T)
+* Removed unnecessary shebang lines in scripts/* files (Robert C)
+* Fixed GL recurring transaction not posting (Chris T)
+* Improved error handling when extensions/contrib scripts not found (Chris T)
+* Fixed multicurrency handling in bulk payment interface (Chris T and Erik H)
 
 Changelog for 1.3.10
 * Fixes for permissions for exchangerate table (Erik H)
